# giza-agents

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  ape-config.yaml  example.py  pyproject.toml  setup.py
.github/workflows/: onpush.yml  onrelease.yml
examples/agent/: read_contracts.py
examples/agents/: action_agent.py  conversion_and_test.py  mnist_agent_tutorial.ipynb  read_contracts.py  using_arbitrum.ipynb  using_polygon.ipynb
examples/agents/abi/: MNISTNFT_abi.json
examples/defi/: lend.py
examples/docker_k8_simple/: Dockerfile  action.py  deployment.py
examples/enzyme/: enzyme_agent.py
examples/ezkl/linear_regression/: README.md  predict_action.py  train_linear_regression.py
examples/imagenet/: Dockerfile  README.md  inference.py
examples/integrations/uniswap/: test_funcs.py  uni_example.py
examples/kubernetes_simple/: Dockerfile  README.md  build_deploy.sh  deployment.py
examples/on-chain_mnist/: .env.example  action_agent.py  on-chain_mnist.ipynb
examples/on-chain_mnist/abi/: MNISTNFT_abi.json
examples/on-chain_mnist/contracts/: foundry.toml
examples/simple/: example.py  example_cron.py  example_interval.py  example_parameters.py
examples/traditional-ml/: decision_tree.ipynb  light_gbm.ipynb  linear_regression.ipynb  xgboost.ipynb
examples/uni_v3_lp/: action_agent.py  mint_position.py
examples/verifiable_mnist/: inference.sierra  verifiable_mnist.ipynb
examples/verifiable_mnist/deployments/: pytorch_mnist_deployment.py
giza/: __init__.py  action.py  cli.py  deployment.py  model.py  sdk.py  task.py  utils.py
giza/agents/: __init__.py  action.py  agent.py  deployments.py  exceptions.py  integration.py  model.py  utils.py
giza/agents/integrations/: __init__.py
giza/cairo/: data_converter.py  file_manager.py
giza_actions/: action.py  agent.py  deployments.py  logger.py  logging.yaml  model.py  on-chain_deploy.py  on_chain_deploy.py  task.py  utils.py
giza_actions/integrations/uniswap/: addresses.py  constants.py  nft_manager.py  pool.py  pool_factory.py  quoter.py  router.py  (+2 more)
pydantic-1.x/giza_cli-0.11.0.dist-info/: METADATA  RECORD
pydantic-1.x/giza_datasets/: __init__.py  constants.py  defillama_constants.py  hub.py  loaders.py  models.py
pydantic-1.x/giza_datasets-0.1.1.dist-info/: LICENSE  METADATA  RECORD
pydantic-1.x/pydantic-1.10.14.dist-info/: RECORD
pydantic-2.x/ape/: version.py
pydantic-2.x/eth_ape-0.7.9.dist-info/: METADATA  RECORD
pydantic-2.x/pydantic-2.6.1.dist-info/: RECORD
pydantic-2.x/pydantic_core-2.16.2.dist-info/: RECORD
tests/: test_agent.py  test_model.py  test_sdk.py  test_utils.py
(+157 files in other folders)
