[tool.poetry]
name = "giza"
version = "0.1.0"
description = "A Python SDK for Giza platform"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
prefect = "^2.14.6"
onnx = "^1.15.0"
httpx = "^0.25.1"
onnxruntime = "^1.16.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.group.dev.dependencies]
pillow = "^10.1.0"
opencv-python = "^4.8.1.78"
black = "^23.11.0"
isort = {extras = ["pyproject"], version = "^5.12.0"}
pytest-cov = "^4.1.0"
mypy = "^1.7.1"
ruff = "^0.1.6"
lazydocs = "^0.4.8"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
giza = 'giza.cli:main'
