[tool.poetry]
name = "giza-actions"
version = "0.1.1"
description = "A Python SDK for Giza platform"
authors = [
    "Francisco Algaba <fran@gizatech.xyz>",
    "Raphael Doukhan <raphael@gizatech.xyz>",
    "Gonzalo Mellizo-Soto <gonzalo@gizatech.xyz>"]
readme = "README.md"
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^1.26.2"
prefect = "^2.14.6"
onnx = "^1.15.0"
httpx = "^0.25.1"
onnxruntime = "^1.16.3"
prefect-gcp = "^0.5.4"
pyyaml = "^6.0.1"
prefect-docker = "^0.4.1"
distlib = "^0.3.8"
giza-cli = "^0.8.1"
giza-osiris = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.group.dev.dependencies]
pillow = "^10.1.0"
opencv-python = "^4.8.1.78"
black = "^23.11.0"
isort = {extras = ["pyproject"], version = "^5.12.0"}
pytest-cov = "^4.1.0"
mypy = "^1.7.1"
ruff = "^0.1.6"
lazydocs = "^0.4.8"
pre-commit = "^3.5.0"
torch = "^2.1.2"
torchvision = "^0.16.2"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
